--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,10 @@
 
         </div>
           <div class="preference">
-            <input autocomplete="off" autofocus class="form-control" name="water" placeholder="How much water drank?" type="text">
-            <label for="water" style="color:#dddddd;">(Provide value in ml)</label>
+            <input autocomplete="off" autofocus class="form-control" name="water" placeholder="Water Drank/ml" type="text">
         </div>
             <div class="preference">
-            <input autocomplete="off" autofocus class="form-control" name="temp" placeholder="Temperature" type="text">
-            <label for="temp" style="color:#dddddd;">(Provide value in °C)</label>
+            <input autocomplete="off" autofocus class="form-control" name="temp" placeholder="Temperature/°C" type="text">
         </div>
 
 
